syntax = "proto3";

option csharp_namespace = "AdminServer";

package repuesto;

// The admin service definition.
service Repuesto {

  // Functions availables
  rpc PostRepuesto(RepuestoDTO) returns (MessageReply);
  rpc GetRepuesto(Id) returns (MessageReply);
  rpc PutRepuesto(RepuestoDTO) returns (MessageReply);
  rpc DeleteRepuesto(Id) returns (MessageReply);
}

 message RepuestoDTO {
	string name = 1;
	string proveedor = 2;
	string marca = 3;
}

message MessageReply {
	string message = 1;
}

message Id {
	int32 id = 1;
}
